# wine-winget

./: Cargo.toml  README.md
src/: cli.rs  main.rs  schema.rs  settings.rs
